# knowledge-graph-rs

./: CLAUDE.md  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  envelope.rs  main.rs
crates/cli/tests/: cli_smoke.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  graph.rs  indexer.rs  lib.rs  parser.rs  resolve.rs  store.rs  types.rs  wiki_links.rs
crates/core/tests/: graph_test.rs  indexer_test.rs  parser_test.rs  store_test.rs
crates/core/tests/fixtures/vault/: Ambiguous.md  code-fences.md  malformed-yaml.md  no-title.md  orphan.md
crates/core/tests/fixtures/vault/.obsidian/: config.json
crates/core/tests/fixtures/vault/Archive/: Alice Smith.md
crates/core/tests/fixtures/vault/Concepts/: Gadget Pattern.md  Widget Theory.md
crates/core/tests/fixtures/vault/Ideas/: Acme Project.md
crates/core/tests/fixtures/vault/People/: Alice Smith.md  Bob Jones.md
doc/: cookbook.md  implementation-notes.md  roadmap.md
