[workspace]
members = ["crates/core", "crates/cli"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.3"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1"
ignore = "0.4"
rusqlite = { version = "0.35", features = ["bundled"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
petgraph = "0.8"
kg-core = { path = "crates/core" }
