[package]
name = "kg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "kg"
path = "src/main.rs"

[dependencies]
kg-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
